# devops-engineer-from-scratch-project-49

./: .gitignore  README.md  pyproject.toml
brain_games/: cli.py  engine.py  random.py  types.py
brain_games/games/: calc.py  gcd.py  is_even.py  is_prime.py  progression.py
brain_games/scripts/: brain_even.py  brain_games.py  engine.py  run_calc.py  run_even.py  run_gcd.py  run_prime.py  run_progression.py
brain_games/scripts/games/: calc.py  gcd.py  is_even.py  is_prime.py  progression.py
