[project]
name = "brain-games"
version = "0.1.0"
description = "Учебный проект #1 в рамках учебного курса Hexlet"
authors = [
    { name = "Oleg Brekalo", email = "brekalooleg@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:run_even_game"
brain-calc = "brain_games.scripts.brain_games:run_calc_game"
brain-gcd = "brain_games.scripts.brain_games:run_gcd_game"
brain-progression = "brain_games.scripts.brain_games:run_progression_game"
brain-prime = "brain_games.scripts.brain_games:run_prime_game"
