[project]
name = "hexlet-code"
version = "0.1.0"
description = "Учебный проект #1 в рамках учебного курса Hexlet"
authors = [
    { name = "Oleg Brekalo", email = "brekalooleg@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.run_even:main"
brain-calc = "brain_games.scripts.run_calc:main"
brain-gcd = "brain_games.scripts.run_gcd:main"
brain-progression = "brain_games.scripts.run_progression:main"
brain-prime = "brain_games.scripts.run_prime:main"
